[gd_scene load_steps=8 format=3 uid="uid://8ff3fs2p2g87"]

[ext_resource type="Script" path="res://scripts/utils/staging.gd" id="1_mfp3y"]
[ext_resource type="PackedScene" uid="uid://wtpox7m5vu2b" path="res://addons/godot-xr-tools/effects/fade.tscn" id="2_qxpur"]
[ext_resource type="Environment" uid="uid://ckiwtcdsam7ed" path="res://addons/godot-xr-tools/staging/staging_env.tres" id="3_qsis7"]
[ext_resource type="PackedScene" uid="uid://btknduttnmoxf" path="res://addons/godot-xr-tools/misc/vr_common_shader_cache.tscn" id="4_f0vd6"]
[ext_resource type="PackedScene" uid="uid://bqumugyvkct4r" path="res://addons/godot-xr-tools/staging/loading_screen.tscn" id="5_ytbc2"]
[ext_resource type="PackedScene" uid="uid://clc5dre31iskm" path="res://addons/godot-xr-tools/xr/start_xr.tscn" id="6_arenq"]
[ext_resource type="Texture2D" uid="uid://deqv67ba72qxl" path="res://textures/loading_screen.png" id="6_k0kml"]

[node name="Staging" type="Node3D"]
process_mode = 3
script = ExtResource("1_mfp3y")
main_menu_scene = "res://scenes/main_menu.tscn"

[node name="Fade" parent="." instance=ExtResource("2_qxpur")]

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.92571, 0)
environment = ExtResource("3_qsis7")

[node name="VRCommonShaderCache" parent="XROrigin3D/XRCamera3D" instance=ExtResource("4_f0vd6")]

[node name="LeftHandController" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"
pose = &"aim"

[node name="RightHandController" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"
pose = &"aim"

[node name="LoadingScreen" parent="." instance=ExtResource("5_ytbc2")]
splash_screen = ExtResource("6_k0kml")
progress = 0.0

[node name="Scene" type="Node3D" parent="."]

[node name="StartXR" parent="." instance=ExtResource("6_arenq")]

[connection signal="xr_ended" from="StartXR" to="." method="_on_StartXR_xr_ended"]
[connection signal="xr_started" from="StartXR" to="." method="_on_StartXR_xr_started"]
